--- a/css/teamStyle.css
+++ b/css/teamStyle.css
@@ -1,7 +1,7 @@
 .divNewTeam{
     border: 1px solid #f1eef1;
-    width: 350px;
-
+    width: 30%;
+    border-radius: 3%;
 }
 .contentTem{
     display: flex;
