--- a/detaliiCurs/views/detalii-curs.html
+++ b/detaliiCurs/views/detalii-curs.html
@@ -11,8 +11,6 @@
     <meta name="keywords" content="HTML5, bootstrap, mobile, app, landing, ios, android, responsive">
     <!-- Font -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="dns-prefetch" href="//fonts.googleapis.com">
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <!-- Themify Icons -->
@@ -20,14 +18,17 @@
     <!-- Owl carousel -->
     <link rel="stylesheet" href="../../css/owl.carousel.min.css">
     <link rel="stylesheet" href="../css/detalii-curs.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker3.css">
     <!-- Main css -->
     <link href="../../css/style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="../images/partea_de_susLogo.png"/>
+    <link rel="shortcut icon" href="../../images/partea_de_susLogo.png"/>
     <!-- jQuery and Bootstrap -->
     <script src="../../js/jquery-3.2.1.min.js"></script>
     <script src="../../js/bootstrap.bundle.min.js"></script>
     <!-- Plugins JS -->
     <script src="../../js/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="../js/formValidation.js"></script>
     <!-- Custom JS -->
 
 </head>
@@ -55,19 +56,21 @@
 <!-- Header start -->
 
 <header  class="header-detalii-curs">
-        <h2 class="detalii-curs-titlu" id="cursTitle">Java-Script Basics</h2>
+        <h2 class="detalii-curs-titlu">Java-Script Basics</h2>
         <h4 class="detalii-curs-motto">Vino sa dram drumul primei noastre aplicatii</h4>
         <div class="detalii-curs-button-container">
-            <button type="button" class="btn btn-dark">Inscrie-te</button>
+            <button type="btn-lg button" class="btn btn-dark enroll-header-btn">
+                <a href="#enroll-form">INSCRIE-TE</a>
+            </button>
         </div>
     </div>
 </header>
-<hr>
 
 <!-- Header ends -->
 
 <!-- Info curs start -->
-<section class="info-curs-container">
+<section class="curs-container">
+<div class="info-curs-container">
     <div class="info-title" >
         <h2>Informatii despre cursul intro in web development</h2>
     </div>
@@ -131,14 +134,14 @@
                     <h4>Pentru cine facem acest curs</h4>
                     <p> Acest curs iti va arata ca si tu poti construi aplicatii web chiar daca nu ai experienta in domeniul tehnic.<br> De ce ai nevoie este de o motivatie puternica,gandire  logica si cacaturi </p>
                 </div>
-                <div class="">
+                <div class="descriere-cui-se-adreseaza">
                     <h4> Desciere</h4>
                     <p>Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere şi le-a amestecat pentru a crea o carte demonstrativă pentru literele respective. Nu doar că a supravieţuit timp de cinci secole, dar şi a facut saltul în tipografia electronică practic neschimbată. A fost popularizată în anii '60 odată cu ieşirea colilor Letraset care conţineau pasaje Lorem Ipsum, iar mai recent, prin programele de publicare pentru calculator, ca Aldus PageMaker care includeau versiuni de Lorem Ipsum.</p>
                 </div>
         </div>
     </div>
+</div>
 </section>
-<hr>
 <!-- Info curs ends -->
 
 
@@ -207,25 +210,6 @@
             <h2>Traineri <span>Web Development</span></h2>
         </div>
         <div class="trainer-container">
-            <div class="trainer-row first-trainer">
-                <div class="trainer-profile">
-                    <div class="trainer-image-container">
-                        <img src="../../images/pozaIonutPausan.jpg" class="trainer-image" alt="Ionut Pausan Pic">
-                    </div>
-                    <div class="trainer-name">
-                        <h3>Ionut Pausan</h3>
-                    </div>
-                </div>
-                <div class="trainer-description">
-                    <h4>Descriere trainer</h4>
-                    <p>Acest curs iti va arata ca si tu poti construi aplicatii web chiar daca nu ai experienta in domeniul tehnic.<br> De ce ai nevoie este de o motivatie puternica,gandire  logica si cacaturi </p>
-                    <div class="trainer-short-description">
-                        <span>2 ani experienta</span>
-                        <span>linkedin</span>
-                        <span>2 ani experienta</span>
-                    </div>
-                </div>
-            </div>
             <div class="trainer-row">
                 <div class="trainer-profile">
                     <div class="trainer-image-container">
@@ -239,9 +223,27 @@
                     <h4>Descriere trainer</h4>
                     <p>Acest curs iti va arata ca si tu poti construi aplicatii web chiar daca nu ai experienta in domeniul tehnic.<br> De ce ai nevoie este de o motivatie puternica,gandire  logica si cacaturi </p>
                     <div class="trainer-short-description">
-                        <span>2 ani experienta</span>
                         <span>linkedin</span>
-                        <span>2 ani experienta</span>
+                        <span>fara ani experienta</span>
+                    </div>
+                </div>
+            </div>
+            <div class="trainer-delimitator"></div>
+            <div class="trainer-row">
+                <div class="trainer-profile">
+                    <div class="trainer-image-container">
+                        <img src="../../images/pozaIonutPausan.jpg" class="trainer-image" alt="Ionut Pausan Pic">
+                    </div>
+                    <div class="trainer-name">
+                        <h3>Ionut Pausan</h3>
+                    </div>
+                </div>
+                <div class="trainer-description">
+                    <h4>Descriere trainer</h4>
+                    <p>Acest curs iti va arata ca si tu poti construi aplicatii web chiar daca nu ai experienta in domeniul tehnic.<br> De ce ai nevoie este de o motivatie puternica,gandire  logica si cacaturi </p>
+                    <div class="trainer-short-description">
+                        <span>linkedin</span>
+                        <span>fara ani experienta</span>
                     </div>
                 </div>
             </div>
@@ -253,81 +255,99 @@
 
 <!-- INSCRIERE LA CURS STARTS -->
 
-<section class="inscriere-curs-container">
-    <div class="inscriere-marketing-section">
-        <h1>Mesaj indemnare la actiune</h1>
-        <h3>Vrei sa avem o conversatie si sa ne cunoastem mai bine?</h3>
-        <div>
-            <img src="" alt="HTML"/>
-            <img src="" alt="CSS"/>
-            <img src="" alt="JAVASCRIPT"/>     
-        </div>
-    </div>
-    <div class="inscriere-form-container">
-        <form class="formular-inscriere" action="">
-                <div class="row input-space">
-                    <div class="col-xs-6 col-md-6">
-                        <label for="firstname">Prenume</label>
-                        <input type="text" name="firstname" value="" class="form-control input-lg" placeholder="First Name"/>
-                    </div>
-                    <div class="col-xs-6 col-md-6">
-                            <label for="lastname">Nume</label>
-                        <input type="text" name="lastname" value="" class="form-control input-lg" placeholder="Last Name"/>    
-                    </div>
-                </div>
-
-                <label for="date">Data nasterii</label>
-                <input type="text" name="date" value="" class="input-space form-control input-lg" placeholder="Data nasterii: 19.03.1993"/>
-                
-                <label for="date">Cunostinte in IT</label>
-                <textarea type="text" name="date" value="" class="input-space form-control input-lg" placeholder="Descrie in 2-3 randuri cunostintele tale in IT"/></textarea>
-                
-                <div class="row input-space">
-                    <div class="col-xs-6 col-md-6">
-                        <label for="email">Email</label>
-                        <input type="text" name="email" value="" class="form-control input-lg" placeholder="Your Email"/>
-                    </div>
-                    <div class="col-xs-6 col-md-6">
-                        <label for="phone">Telefon</label>
-                        <input type="text" name="phone" value="" class="form-control input-lg" placeholder="07439228843"/>    
-                    </div>
-                </div>
-                
-                <label for="date">Industria din care provii</label>
-                <input type="text" name="date" value="" class="input-space form-control input-lg" placeholder="Inginerie/Psihologie"/>
-                
-                <label for="month">Nivel limba engleza</label>
-                <select name="month" class = "form-control input-lg input-space">
-                        <option value="incepator">Incepator</option>
-                        <option value="mediu">Mediu</option>
-                        <option value="avansat">Avansat</option>
-                </select>
-
-                <label for="marketing-source">De unde ai auzit de noi?</label>
-                <select name="month" class = "form-control input-lg input-space">
-                        <option value="internet">Internet</option>
-                        <option value="prieteni">Prieteni/Cunostinte</option>
-                        <option value="social-media">Social Media</option>
-                        <option value="meetup">Meetup-uri</option>
-                        <option value="conferinte">Conferinte</option>
-                </select>
-
-                <div>
-                    <label>Gender : </label>     
-                    <label class="radio-inline">
-                        <input type="radio" name="gender" value="M" id=male />      Male
-                    </label>
-                    <label class="radio-inline">
-                        <input type="radio" name="gender" value="F" id=female />        Female
-                    </label>
-                </div>
-                <div class="termeni-conditii">
-                    <input type="checkbox" name="date" value="" class="input-space form-control input-lg checkbox" placeholder="Inginerie/Psihologie"/>
-                    <span>Accept termenii si conditiile</span>        
-                </div>
-                <button class="btn btn-lg btn-primary btn-block enroll-btn" type="submit">Ma inscriu</button>
+<section class="inscriere-curs-section" id="enroll-form">
+    <h1 class="info-title text-center">Vino la noi in echipa</h1>
+    <div class="inscriere-curs-container">
+        <div class="inscriere-marketing-section">
+            <div class="marketing-section-part1">
+                <h1>Mesaj indemnare la actiune</h1>
+                <h3>Vrei sa avem o conversatie si sa ne cunoastem mai bine?</h3>
             </div>
-        </form>
+            <div class"marketing-section-part2">
+                <div class="img-container">
+                    <div class="marketing-image-container">
+                        <img src="../../images/html.png" alt="HTML"/>
+                    </div>
+                    <div class="marketing-image-container">
+                        <img src="../../images/css.png" alt="CSS"/>
+                    </div>
+                    <div class="marketing-image-container">
+                        <img src="../../images/jsicon.png" alt="JAVASCRIPT"/>     
+                    </div>
+                 </div>
+            </div>
+        </div>
+        <div class="inscriere-form-container">
+                <form class="formular-inscriere" action="">
+                        <div class="row input-space">
+                            <div class="col-xs-6 col-md-6">
+                                <label for="firstname">Prenume</label>
+                                <input type="text" name="firstname" value="" class="form-control input-lg" required placeholder="First Name"/>
+                            </div>
+                            <div class="col-xs-6 col-md-6">
+                                    <label for="lastname">Nume</label>
+                                <input type="text" name="lastname" value="" class="form-control input-lg" required placeholder="Last Name"/>    
+                            </div>
+                        </div>
+    
+                        <label for="date">Data nasterii*</label>
+                        <div class="input-group date input-space" class="datepicker" data-provide="datepicker">
+                            <input type="text" class="input-space form-control input-lg" placeholder="09.12.2019" required>
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar" style="color:black"></i>
+                            </div>
+                        </div>
+                        
+                        <label for="date">Cunostinte in IT</label>
+                        <textarea required type="text" name="date" value="" class="input-space form-control input-lg" placeholder="Descrie in 2-3 randuri cunostintele tale in IT"/></textarea>
+                        
+                        <div class="row input-space">
+                            <div class="col-xs-6 col-md-6">
+                                <label for="email">Email</label>
+                                <input required type="text" name="email" value="" class="form-control input-lg" placeholder="Your Email"/>
+                            </div>
+                            <div class="col-xs-6 col-md-6">
+                                <label for="phone">Telefon</label>
+                                <input required type="tel"  pattern="[0-9]{10}" name="phone" value="" class="form-control input-lg" placeholder="07439228843"/>    
+                            </div>
+                        </div>
+                        
+                        <label for="date">Industria din care provii</label>
+                        <input type="text" name="date" value="" class="input-space form-control input-lg" required placeholder="Inginerie/Psihologie"/>
+                        
+                        <label for="month">Nivel limba engleza</label>
+                        <select name="month" class = "form-control input-lg input-space" required>
+                                <option value="incepator">Incepator</option>
+                                <option value="mediu">Mediu</option>
+                                <option value="avansat">Avansat</option>
+                        </select>
+    
+                        <!-- <label for="marketing-source">De unde ai auzit de noi?</label>
+                        <select name="month" class = "form-control input-lg input-space" required>
+                                <option value="internet">Internet</option>
+                                <option value="prieteni">Prieteni/Cunostinte</option>
+                                <option value="social-media">Social Media</option>
+                                <option value="meetup">Meetup-uri</option>
+                                <option value="conferinte">Conferinte</option>
+                        </select> -->
+    
+                        <div>
+                            <label>Gender : </label>     
+                            <label class="radio-inline">
+                                <input type="radio" name="gender" value="M" id=male required />      Male
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="gender" value="F" id=female />        Female
+                            </label>
+                        </div>
+                        <div class="termeni-conditii">
+                            <input type="checkbox" name="date" value="" class="input-space form-control input-lg checkbox" required/>
+                            <span>Accept termenii si conditiile</span>        
+                        </div>
+                        <button class="btn btn-lg btn-primary btn-block enroll-btn" type="submit">Ma inscriu</button>
+                    </div>
+                </form>
+            </div>
     </div>
 </section>
 
@@ -338,10 +358,10 @@
         <div class="footer-row">
             <div class="social-media">
                 <h1>Contacteaza-ne pe:</h1>
-                <p class="social-media-paragraph">Speak programming 
+                <p class="social-media-paragraph">Speak programming: 
                     <span>contact@speakprogramming.ro</span>
                 </p>
-                <p class="social-media-paragraph">Facebook 
+                <p class="social-media-paragraph">Facebook: 
                     <span>contact@speakprogramming.ro</span>
                 </p>
                 <div class="social-media-icons">
@@ -357,18 +377,12 @@
 
                 <label for="mesaj">Scrie-ne un mesaj</label>
                 <textarea type="text" name="mesaj" value="" class="input-space form-control input-lg" placeholder="Mesaj..."/></textarea>
-                <button class="btn btn-lg btn-primary btn-block submit-button" type="submit">Submit</button>
+                <button class="btn submit-button-footer">Submit</button>
             </div>
-
         </div>
 
 
-        <p class="mb-2 copyright-message text-center"><small>COPYRIGHT © 2017. ALL RIGHTS RESERVED BY <a href="">SPEAK PROGRAMMING</a></small></p>
-        <small class="copyright-message text-center">
-            <a href="#" class="m-2 text-center">PRESS</a>
-            <a href="#" class="m-2 text-center">TERMS</a>
-            <a href="#" class="m-2 text-center">PRIVACY</a>
-        </small>
+        <p class="copyright-message text-center"><small>COPYRIGHT © 2017. ALL RIGHTS RESERVED BY <a href="">SPEAK PROGRAMMING</a></small></p>
     </div>
 </footer>
 
