Edit WebService and add param to getCursuri : scurta_descriere

--- a/detaliiCurs/views/detalii-curs.html
+++ b/detaliiCurs/views/detalii-curs.html
@@ -282,7 +282,7 @@
                         <div class="row input-space">
                             <div class="col-xs-6 col-md-6">
                                 <label for="firstname">Prenume</label>
-                                <input type="text" name="firstname" value="" class="form-control input-lg" required placeholder="First Name"/>
+                                <input type="text" id ="firstname" name="firstname" value="" class="form-control input-lg" required placeholder="First Name"/>
                             </div>
                             <div class="col-xs-6 col-md-6">
                                     <label for="lastname">Nume</label>
@@ -292,7 +292,7 @@
     
                         <label for="date">Data nasterii*</label>
                         <div class="input-group date input-space" class="datepicker" data-provide="datepicker">
-                            <input type="text" class="input-space form-control input-lg" placeholder="09.12.2019" required>
+                            <input type="text" id="datepicker" class="input-space form-control input-lg" placeholder="09.12.2019" required>
                             <div class="input-group-addon">
                                 <i class="fa fa-calendar" style="color:black"></i>
                             </div>
@@ -388,5 +388,4 @@
 
 
 </body>
-
 </html>
