--- a/detaliiCurs/views/detalii-curs.html
+++ b/detaliiCurs/views/detalii-curs.html
@@ -7,8 +7,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Mobland - Mobile App Landing Page Template">
-    <meta name="keywords" content="HTML5, bootstrap, mobile, app, landing, ios, android, responsive">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     <!-- Font -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <!-- Bootstrap CSS -->
@@ -16,21 +16,11 @@
     <!-- Themify Icons -->
     <link rel="stylesheet" href="../../css/themify-icons.css">
     <!-- Owl carousel -->
-    <link rel="stylesheet" href="../../css/owl.carousel.min.css">
     <link rel="stylesheet" href="../css/detalii-curs.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker3.css">
     <!-- Main css -->
     <link href="../../css/style.css" rel="stylesheet">
     <link rel="shortcut icon" href="../../images/partea_de_susLogo.png"/>
-    <!-- jQuery and Bootstrap -->
-    <script src="../../js/jquery-3.2.1.min.js"></script>
-    <script src="../../js/bootstrap.bundle.min.js"></script>
-    <!-- Plugins JS -->
-    <script src="../../js/owl.carousel.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js"></script>
-    <script src="../js/formValidation.js"></script>
-    <!-- Custom JS -->
-
 </head>
 
 <body data-spy="scroll" data-target="#navbar" data-offset="30">
@@ -56,8 +46,8 @@
 <!-- Header start -->
 
 <header  class="header-detalii-curs">
-        <h2 class="detalii-curs-titlu">Java-Script Basics</h2>
-        <h4 class="detalii-curs-motto">Vino sa dram drumul primei noastre aplicatii</h4>
+        <h2 class="detalii-curs-titlu"></h2>
+        <h4 class="detalii-curs-motto"></h4>
         <div class="detalii-curs-button-container">
             <button type="btn-lg button" class="btn btn-dark enroll-header-btn">
                 <a href="#enroll-form">INSCRIE-TE</a>
@@ -81,7 +71,7 @@
                 <div class="row-first-elem">
                     <p>Nivel</p>
                 </div>
-                <p class="row-second-elem">Introducere </p>
+                <p class="row-second-elem nivel-curs"></p>
             </div>
             <div class="informatii-curs-row">
                 <div class="row-first-elem">
@@ -89,7 +79,7 @@
                 </div>
                 <div class="row-second-elem">
                     <div class="trainer-linkedin">
-                        <p>Mar 5,2019</p>
+                        <p class="data-start-curs"></p>
                         <i class="far fa-calendar-alt"></i>
                     </div>
                 </div>
@@ -99,9 +89,9 @@
                     <p>Durata</p>
                 </div>
                 <div class="row-second-elem">
-                    <p>4 luni </p>
-                    <p>5 ore/saptamana </p>
-                    <p>80 de ore </p>
+                    <p class="durata-curs"></p>
+                    <p class="numar-ore-sapt-curs"></p>
+                    <p class="numar-total-ore-curs"></p>
                 </div>
             </div>
             <div class="informatii-curs-row">
@@ -109,22 +99,14 @@
                             <p> Investitie </p>
                         </div>
                
-                <p class="row-second-elem">1500 RON</p>
+                <p class="row-second-elem pret-curs-detalii"></p>
             </div>
             <div class="informatii-curs-row">
                     <div class="row-first-elem">
                             <p>Traineri</p>
                         </div>
-                
-                <div class="row-second-elem">
-                    <div class="trainer-linkedin">
-                        <p>Rosu Catalin</p>
-                        <i href="https://www.linkedin.com/in/ro%C8%99u-c%C4%83t%C4%83lin-dorin-872322112/" class="fab fa-linkedin"></i>
-                    </div>
-                    <div class="trainer-linkedin">
-                        <p>Pausan Ionut</p>
-                        <i class="fab fa-linkedin"></i>
-                    </div>
+                <div class="row-second-elem row-second-elem-traineri">
+                    
                 </div>
             </div>
         </div>
@@ -207,46 +189,10 @@
 <section class="trainer-section">
     <div class="descriere-trainer">
         <div class="info-title" >
-            <h2>Traineri <span>Web Development</span></h2>
+            <h2>Traineri <span class="titlu-curs-red"></span></h2>
         </div>
         <div class="trainer-container">
-            <div class="trainer-row">
-                <div class="trainer-profile">
-                    <div class="trainer-image-container">
-                        <img src="../../images/pozaIonutPausan.jpg" class="trainer-image" alt="Ionut Pausan Pic">
-                    </div>
-                    <div class="trainer-name">
-                        <h3>Ionut Pausan</h3>
-                    </div>
-                </div>
-                <div class="trainer-description">
-                    <h4>Descriere trainer</h4>
-                    <p>Acest curs iti va arata ca si tu poti construi aplicatii web chiar daca nu ai experienta in domeniul tehnic.<br> De ce ai nevoie este de o motivatie puternica,gandire  logica si cacaturi </p>
-                    <div class="trainer-short-description">
-                        <span>linkedin</span>
-                        <span>fara ani experienta</span>
-                    </div>
-                </div>
-            </div>
-            <div class="trainer-delimitator"></div>
-            <div class="trainer-row">
-                <div class="trainer-profile">
-                    <div class="trainer-image-container">
-                        <img src="../../images/pozaIonutPausan.jpg" class="trainer-image" alt="Ionut Pausan Pic">
-                    </div>
-                    <div class="trainer-name">
-                        <h3>Ionut Pausan</h3>
-                    </div>
-                </div>
-                <div class="trainer-description">
-                    <h4>Descriere trainer</h4>
-                    <p>Acest curs iti va arata ca si tu poti construi aplicatii web chiar daca nu ai experienta in domeniul tehnic.<br> De ce ai nevoie este de o motivatie puternica,gandire  logica si cacaturi </p>
-                    <div class="trainer-short-description">
-                        <span>linkedin</span>
-                        <span>fara ani experienta</span>
-                    </div>
-                </div>
-            </div>
+            <!-- <div class="trainer-delimitator"></div>  -->
         </div>
     </div>
 </section>
@@ -282,7 +228,7 @@
                         <div class="row input-space">
                             <div class="col-xs-6 col-md-6">
                                 <label for="firstname">Prenume</label>
-                                <input type="text" id ="firstname" name="firstname" value="" class="form-control input-lg" required placeholder="First Name"/>
+                                <input type="text" name="firstname" value="" class="form-control input-lg" required placeholder="First Name"/>
                             </div>
                             <div class="col-xs-6 col-md-6">
                                     <label for="lastname">Nume</label>
@@ -292,7 +238,7 @@
     
                         <label for="date">Data nasterii*</label>
                         <div class="input-group date input-space" class="datepicker" data-provide="datepicker">
-                            <input type="text" id="datepicker" class="input-space form-control input-lg" placeholder="09.12.2019" required>
+                            <input type="text" class="input-space form-control input-lg" placeholder="09.12.2019" required>
                             <div class="input-group-addon">
                                 <i class="fa fa-calendar" style="color:black"></i>
                             </div>
@@ -311,8 +257,7 @@
                                 <input required type="tel"  pattern="[0-9]{10}" name="phone" value="" class="form-control input-lg" placeholder="07439228843"/>    
                             </div>
                         </div>
-                        
-                        <label for="date">Industria din care provii</label>
+                                            <label for="date">Industria din care provii</label>
                         <input type="text" name="date" value="" class="input-space form-control input-lg" required placeholder="Inginerie/Psihologie"/>
                         
                         <label for="month">Nivel limba engleza</label>
@@ -331,15 +276,6 @@
                                 <option value="conferinte">Conferinte</option>
                         </select> -->
     
-                        <div>
-                            <label>Gender : </label>     
-                            <label class="radio-inline">
-                                <input type="radio" name="gender" value="M" id=male required />      Male
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" name="gender" value="F" id=female />        Female
-                            </label>
-                        </div>
                         <div class="termeni-conditii">
                             <input type="checkbox" name="date" value="" class="input-space form-control input-lg checkbox" required/>
                             <span>Accept termenii si conditiile</span>        
@@ -385,7 +321,18 @@
         <p class="copyright-message text-center"><small>COPYRIGHT © 2017. ALL RIGHTS RESERVED BY <a href="">SPEAK PROGRAMMING</a></small></p>
     </div>
 </footer>
+    <script src="../../js/jquery-3.2.1.min.js"></script>
+    <script src="../../js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js"></script>
+    
+    <script src="../js/formValidation.js"></script>
+
+    <script src="../../js/makeRekuest.js"></script>
+    <script src="../../js/createBodyRequest.js"></script>
+    <script src="../js/detalii-curs-service.js"></script>
+    <script src="../js/detalii-curs.js"></script>
 
 
 </body>
+
 </html>
