--- a/css/constants.css
+++ b/css/constants.css
@@ -16,5 +16,6 @@
     --main-content-width: 70%;
     --main-border-container:  1px solid #7a7a7a54;
     --full-dimension: 100%;
+    --main-content-width-mobile:80% ;
 
   }
