--- a/detaliiCurs/views/detalii-curs.html
+++ b/detaliiCurs/views/detalii-curs.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-dark navbar-expand-lg">
-                    <a class="navbar-brand" href="../../home-page/index.html"><img src="../../images/logo_partea_deJos.png" height="43" width="43" class="img-fluid" alt="logo"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                    <a class="navbar-brand" href="../../home-page/index.html"><img src="../../images/head.png" height="60" width="60" class="img-fluid" alt="logo"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                     <div class="collapse navbar-collapse" id="navbar">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item"> <a class="nav-link active" href="../../home-page/index.html">HOME <span class="sr-only">(current)</span></a> </li>
@@ -210,7 +210,7 @@
                 <h1>Mesaj indemnare la actiune</h1>
                 <h3>Vrei sa avem o conversatie si sa ne cunoastem mai bine?</h3>
             </div>
-            <div class"marketing-section-part2">
+            <div class = "marketing-section-part2">
                 <div class="img-container">
                     <div class="marketing-image-container">
                         <img src="../../images/html.png" alt="HTML"/>
@@ -259,7 +259,7 @@
                             </div>
                             <div class="col-xs-6 col-md-6">
                                 <label for="phone">Telefon</label>
-                                <input required type="tel"  pattern="[0-9]{10}" name="phone" value="" class="form-control input-lg phone" placeholder="07439228843"/>    
+                                <input required type="tel" maxlength="10"  pattern="[0-9]{10}" name="phone" value="" class="form-control input-lg phone" placeholder="07439228843"/>    
                                 <p class="phone-error-msg"></p>
                             </div>
                         </div>
@@ -278,8 +278,8 @@
                             <span>Accept termenii si conditiile</span>        
                         </div>
                          <p class="message-after-enroll"></p>
-                        <button class="btn btn-lg btn-primary btn-block enroll-btn" type="submit">Ma inscriu</button>
-                    </div>
+                        <button class="btn btn-lg btn-primary btn-block enroll-btn" >Ma inscriu</button>
+
                 </form>
             </div>
     </div>
