--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ p {
 ----------------------*/
 
 .nav-menu {
-    padding: 1rem 0;
+    padding: 0;
     transition: all 0.3s ease;
     background-color: rgba(0, 0, 0, 0.85);
 }
