--- a/detaliiCurs/views/detalii-curs.html
+++ b/detaliiCurs/views/detalii-curs.html
@@ -36,13 +36,10 @@
                     <div class="collapse navbar-collapse" id="navbar">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item"> <a class="nav-link active" href="../../home-page/index.html">ACASĂ <span class="sr-only">(current)</span></a> </li>
-<<<<<<< HEAD
-=======
                             <!-- <li class="nav-item"> <a class="nav-link active" href="../../home-page/index.html">Informatii curs <span class="sr-only"></span></a> </li>
                             <li class="nav-item"> <a class="nav-link active" href="../../home-page/index.html">Traineri <span class="sr-only"></span></a> </li>
                             <li class="nav-item"> <a class="nav-link active" href="../../home-page/index.html">Inscrie-te <span class="sr-only"></span></a> </li>
                             <li class="nav-item"> <a class="nav-link active" href="../../home-page/index.html">Contact <span class="sr-only"></span></a> </li> -->
->>>>>>> 836723c09cbf4acabf9efe359730da9be7aa6b8f
                         </ul>
                     </div>
                 </nav>
@@ -121,11 +118,11 @@
             <!-- put text into variables -->
                 <div class="descriere-cui-se-adreseaza">
                     <h4>Pentru cine facem acest curs</h4>
-                    <p> Acest curs iti va arata ca si tu poti construi aplicatii web chiar daca nu ai experienta in domeniul tehnic.<br> De ce ai nevoie este de o motivatie puternica,gandire  logica si cacaturi </p>
+                    <p class="msg-pers-targetate"><br> De ce ai nevoie este de o motivatie puternica,gandire  logica si cacaturi </p>
                 </div>
                 <div class="descriere-cui-se-adreseaza">
                     <h4> Desciere</h4>
-                    <p>Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere şi le-a amestecat pentru a crea o carte demonstrativă pentru literele respective. Nu doar că a supravieţuit timp de cinci secole, dar şi a facut saltul în tipografia electronică practic neschimbată. A fost popularizată în anii '60 odată cu ieşirea colilor Letraset care conţineau pasaje Lorem Ipsum, iar mai recent, prin programele de publicare pentru calculator, ca Aldus PageMaker care includeau versiuni de Lorem Ipsum.</p>
+                    <p class="descriere-curs-text"></p>
                 </div>
         </div>
     </div>
@@ -297,7 +294,7 @@
     <div class="footer-container">
         <div class="footer-row">
             <div class="social-media">
-                <h1>Contacteaza-ne pe:</h1>
+                <h1>Contact:</h1>
                 <p class="social-media-paragraph">Speak programming: 
                     <span>contact@speakprogramming.ro</span>
                 </p>
