Add payment method

--- a/detaliiCurs/views/detalii-curs.html
+++ b/detaliiCurs/views/detalii-curs.html
@@ -117,6 +117,13 @@
                 </div>
                 <div class="informatii-curs-row">
                     <div class="row-first-elem">
+                        <p> Plata cursului</p>
+                    </div>
+
+                    <p class="row-second-elem pret-curs-detalii plata-in-rate">Integral sau în 3 rate fara dobanda.</p>
+                </div>
+                <div class="informatii-curs-row">
+                    <div class="row-first-elem">
                         <p>Traineri</p>
                     </div>
                     <div class="row-second-elem row-second-elem-traineri">
