Add location to the footer of the page

--- a/detaliiCurs/views/detalii-curs.html
+++ b/detaliiCurs/views/detalii-curs.html
@@ -299,8 +299,8 @@
                 <p class="social-media-paragraph">Speak programming:
                     <span>contact@speakprogramming.ro</span>
                 </p>
-                <p class="social-media-paragraph">Facebook:
-                    <span>contact@speakprogramming.ro</span>
+                <p class="social-media-paragraph">Adresa:
+                    <span>Cluj-Napoca, Strada Cotită, numărul 9.</span>
                 </p>
                 <div class="social-media-icons">
                 </div>
