--- a/detaliiCurs/views/detalii-curs.html
+++ b/detaliiCurs/views/detalii-curs.html
@@ -130,7 +130,7 @@
                     <p class="msg-pers-targetate"><br></p>
                 </div>
                 <div class="descriere-cui-se-adreseaza">
-                    <h4> Desciere</h4>
+                    <h4> Descriere</h4>
                     <p class="descriere-curs-text"></p>
                 </div>
             </div>
@@ -149,7 +149,7 @@
         <div class="detalii-programa">
             <div class="programa-curs-row">
                 <header class="programa-curs-header">
-                    <h4>Tehnologii si unelte folosite</h4>
+                    <h4>Tehnologii si unelte folosite:</h4>
                 </header>
                 <ul class="lista-programa-curs tehnologii-folosite">
 
@@ -157,14 +157,14 @@
             </div>
             <div class="programa-curs-row">
                 <header class="programa-curs-header">
-                    <h4>Cunostințe necesare pentru curs</h4>
+                    <h4>Cunostințe necesare pentru curs:</h4>
                 </header>
                 <ul class="lista-programa-curs cunostinte-de-baza">
                 </ul>
             </div>
             <div class="programa-curs-row">
                 <header class="programa-curs-header">
-                    <h4>Mindset of a developer</h4>
+                    <h4>Avantaje obținute după terminarea cursului:</h4>
                 </header>
                 <ul class="lista-programa-curs mindset-of-dev">
                 </ul>
@@ -292,12 +292,12 @@
                 <p class="social-media-paragraph">Speak programming:
                     <span>contact@speakprogramming.ro</span>
                 </p>
-                <p class="social-media-paragraph">Facebook:
-                    <span>contact@speakprogramming.ro</span>
-                </p>
+                <!--<p class="social-media-paragraph">Facebook:-->
+                    <!--<span>contact@speakprogramming.ro</span>-->
+                <!--</p>-->
                 <div class="social-media-icons">
                 </div>
-                <a href="https://www.facebook.com/Speak-programming-1995720327193287/"> <i
+                <a target="_blank" href="https://www.facebook.com/Speak-programming-1995720327193287/"> <i
                         class="fab fa-facebook-square"></i> </a>
             </div>
 
