--- a/home-page/home.css
+++ b/home-page/home.css
@@ -18,7 +18,7 @@
 
 .course-image-container {
     width: var(--full-dimension);
-    height: 37%;
+    height: 200px;
     content: url("../images/headerbk.jpg");
 }
 
